cluster/traefik/whoami/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: whoami-service
  namespace: traefik
spec:
  ports:
  - name: http
    targetPort: 80
    port: 80
  selector:
    app: whoami
